[package]
name = "zhengming"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
docx-rs = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.21"
sha2 = "0.10"
regex = "1"
zip = "0.6"
rayon = "1.8"
tantivy = "0.22.0"
csv = "1.3"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
